--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.5",
 		"@tanstack/react-query": "^4.35.0",
 		"@types/react-router-dom": "^5.3.3",
 		"axios": "^1.5.0",
 		"json-server": "^0.17.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-redux": "^8.1.2",
 		"react-router-dom": "^6.15.0"
 	},
 	"devDependencies": {
