--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
+		"dev": "concurrently \"vite\" \"yarn server\"",
 		"server": "json-server --watch src/json-server/db.json -p 5500",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -15,6 +15,7 @@
 		"@tanstack/react-query": "^4.35.0",
 		"@types/react-router-dom": "^5.3.3",
 		"axios": "^1.5.0",
+		"concurrently": "^8.2.1",
 		"json-server": "^0.17.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
