--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
 		"json-server": "^0.17.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-feather": "^2.0.10",
 		"react-redux": "^8.1.2",
-		"react-router-dom": "^6.15.0"
+		"react-router-dom": "^6.15.0",
+		"sass": "^1.67.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.15",
