--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@reduxjs/toolkit": "^1.9.5",
 		"@tanstack/react-query": "^4.35.0",
 		"@types/react-router-dom": "^5.3.3",
+		"@types/react-toastify": "^4.1.0",
 		"axios": "^1.5.0",
 		"concurrently": "^8.2.1",
 		"json-server": "^0.17.3",
@@ -22,6 +23,7 @@
 		"react-feather": "^2.0.10",
 		"react-redux": "^8.1.2",
 		"react-router-dom": "^6.15.0",
+		"react-toastify": "^9.1.3",
 		"sass": "^1.67.0"
 	},
 	"devDependencies": {
