--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.11.1",
+		"@emotion/styled": "^11.11.0",
+		"@mui/icons-material": "^5.14.9",
+		"@mui/material": "^5.14.10",
+		"@mui/styled-engine-sc": "^5.14.10",
 		"@reduxjs/toolkit": "^1.9.5",
 		"@tanstack/react-query": "^4.35.0",
 		"@types/react-router-dom": "^5.3.3",
@@ -24,7 +29,8 @@
 		"react-redux": "^8.1.2",
 		"react-router-dom": "^6.15.0",
 		"react-toastify": "^9.1.3",
-		"sass": "^1.67.0"
+		"sass": "^1.67.0",
+		"styled-components": "^6.0.8"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.15",
