--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@mui/icons-material": "^5.14.9",
 		"@mui/material": "^5.14.10",
 		"@mui/styled-engine-sc": "^5.14.10",
+		"@radix-ui/react-dialog": "^1.0.5",
 		"@reduxjs/toolkit": "^1.9.5",
 		"@tanstack/react-query": "^4.35.0",
 		"@types/react-router-dom": "^5.3.3",
