--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"@mui/material": "^5.14.10",
 		"@mui/styled-engine-sc": "^5.14.10",
 		"@radix-ui/react-dialog": "^1.0.5",
-		"@reduxjs/toolkit": "^1.9.5",
+		"@radix-ui/react-icons": "^1.3.0",
+		"@reduxjs/toolkit": "^1.9.7",
 		"@tanstack/react-query": "^4.35.0",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/react-toastify": "^4.1.0",
@@ -27,7 +28,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-feather": "^2.0.10",
-		"react-redux": "^8.1.2",
+		"react-redux": "^8.1.3",
 		"react-router-dom": "^6.15.0",
 		"react-toastify": "^9.1.3",
 		"sass": "^1.67.0",
