--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@chakra-ui/react": "^2.8.1",
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
 		"@mui/icons-material": "^5.14.9",
@@ -24,6 +25,7 @@
 		"@types/react-toastify": "^4.1.0",
 		"axios": "^1.5.0",
 		"concurrently": "^8.2.1",
+		"framer-motion": "^10.16.4",
 		"json-server": "^0.17.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -31,7 +33,6 @@
 		"react-redux": "^8.1.3",
 		"react-router-dom": "^6.15.0",
 		"react-toastify": "^9.1.3",
-		"sass": "^1.67.0",
 		"styled-components": "^6.0.8"
 	},
 	"devDependencies": {
@@ -49,6 +50,7 @@
 		"react-material-ui-carousel": "^3.4.2",
 		"react-select": "^5.7.4",
 		"react-spinners": "^0.13.8",
+		"sass": "^1.69.3",
 		"tailwindcss": "3.3.3",
 		"typescript": "^5.0.2",
 		"vite": "^4.4.5"
