--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
 	},
 	"dependencies": {
 		"@chakra-ui/react": "^2.8.1",
+		"@chakra-ui/table": "^2.1.0",
+		"@coreui/coreui": "^5.0.0-alpha.3",
+		"@coreui/react": "^5.0.0-alpha.3",
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
 		"@mui/icons-material": "^5.14.9",
@@ -20,6 +23,7 @@
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@reduxjs/toolkit": "^1.9.7",
+		"@supabase/auth-helpers-react": "^0.4.2",
 		"@tanstack/react-query": "^4.35.0",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/react-toastify": "^4.1.0",
